--- a/v1/build.xml
+++ b/v1/build.xml
@@ -1,5 +1,5 @@
 <?xml version = "1.0" encoding = "UTF-8"?>
-<project default = "run">
+<project default = "jar">
 
 	<target name = "clean">
 		<delete dir = "bin"/>
@@ -22,7 +22,7 @@
 		</jar>
 	</target>
 
-	<target name = "run" depends = "jar">
+	<target name = "run">
 		<java jar = "exe/test.jar" fork = "true"/>
 	</target>
 	
