--- a/build.xml
+++ b/build.xml
@@ -1,29 +1,25 @@
-<?xml version = "1.0" encoding = "UTF-8"?>
-<project default = "jar">
+<project>
 
-	<target name = "clean">
-		<delete dir = "bin"/>
-		<delete dir = "exe"/>
-	</target>
+    <target name="clean">
+        <delete dir="out"/>
+    </target>
 
-	<target name = "compile" depends = "clean">
-		<mkdir dir = "bin"/>
-		<javac includeantruntime = "false" srcdir = "src/engine" destdir = "bin"/>
-		<javac includeantruntime = "false" srcdir = "src/model" destdir = "bin"/>
-		<javac includeantruntime = "false" srcdir = "src/start" destdir = "bin"/>
-	</target>
+    <target name="compile">
+	    <mkdir dir="out/classes"/>
+	    <javac srcdir="src" destdir="out/classes"/>
+    </target>
 
-	<target name = "jar" depends = "compile">
-		<mkdir dir = "exe"/>
-		<jar destfile = "exe/test.jar" basedir = "bin/">
-			<manifest>
-				<attribute name = "Main-Class" value = "start/Main"/>
-			</manifest>
-		</jar>
-	</target>
+    <target name="jar">
+        <mkdir dir="out/jar"/>
+        <jar destfile="out/jar/aMAZEing.jar" basedir="out/classes">
+            <manifest>
+                <attribute name="Main-Class" value="start.Main"/>
+            </manifest>
+        </jar>
+    </target>
 
-	<target name = "run">
-		<java jar = "exe/test.jar" fork = "true"/>
-	</target>
-	
+    <target name="run">
+        <java jar="out/jar/aMAZEing.jar" fork="true"/>
+    </target>
+
 </project>
