--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Build output
+out/
+
+# Old stuffs
+old/
+
+# Intellij 
+.idea/
+
+# Eclipse
+.metadata/
